test/fail/override-let.grace
constructor name {
  let Name = type {}
}

object {
  inherits name

  method Name {}
}
